reinclusao de classes 1